# spectrum

./: .gitattributes  .gitignore  CHANGELOG.md  COMMERCIAL_BOUNDARY.md  CONTRIBUTING.md  DEMO.md  FREEZE.md  FROZEN_BASELINE.md  GOVERNANCE.md  INTERFACE.md  LICENSE  LICENSE.README.md  LICENSE.intent  NOTICE  OWNER  POSITIONING.md  PRODUCT.md  PR_SUMMARY.md  README.md  REPRODUCIBILITY.txt  VERIFICATION.md  VERSION  __init__.py  demo.py  pyproject.toml  pytest.ini  setup.py  test_run2.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  determinism.yml
SPECTRUM_FULL_RELEASE_20260125T054730Z/: RELEASE_SNAPSHOT.md
api/: __init__.py  public.py
audits/2026-01-25/: FULL_SYSTEM_SNAPSHOT_HASHES_20260125T112923Z.txt  FULL_SYSTEM_SNAPSHOT_HASHES_20260125T113401Z.txt  spectrum_mental_map.csv
causality/: irreversible.py
contracts/: CONTRACT.md
docs/: AI_BOUNDARY.md  BOUNDARIES.md  COMMERCIAL.md  CONTRACT.md  RELEASE.md  RELEASE_v3.0.md  SECURITY_MODEL.md  WHAT_IS_SPECTRUM.md
engine/: __init__.py  core.py
interfaces/: README.md
invariants/: core.py
lattice/: state.py
proof/: README.md  hash_proof.txt  replay_proof.py
release/: RELEASE_MANIFEST.json  file_hashes.sha256  files.list  git_state.txt
spectrum/: __init__.py  api.py  file4.txt  replay.py  verify.py
tests/: test_boundary_determinism.py  test_canonical_serialization.py  test_contracts.py  test_determinism.py  test_engine.py  test_engine_registry.py  test_execution_log.py  test_expand_rules.py  test_expansion_rules.py  test_global_invariants.py  test_invariant_composition.py  test_invariant_determinism.py  test_invariant_mining.py  test_invariants.py  test_irreversibility.py  test_irreversibility_determinism.py  test_lattice_determinism.py  test_numeric_stability.py  test_proof_hooks.py  test_replay.py  test_replay_engine.py
(+60 files in other folders)
