[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum"
version = "0.1.0"
description = "Deterministic, replayable measurement and verification framework"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "AttraQter-Labs LLC" }
]

dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["spectrum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


